<!--
  ~ Copyright (C) 2019  AniTrend
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">AniTrend</string>

    <string name="action_search">Search</string>

    <string name="nav_header_customization">Customization</string>
    <string name="nav_header_navigation">Navigation</string>
    <string name="nav_theme">Theme</string>

    <string name="nav_header_support">Support</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_about">About</string>

    <string name="nav_popular_series">Popular Shows</string>
    <string name="nav_popular_movies">Popular Movies</string>

    <string name="action_retry">Reload</string>

    <string name="app_banner_text">AniTrend - </string>

    <string name="Loading">Loading</string>
    <string name="app_splash_description">Powered by AniList</string>
</resources>
