<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019  AniTrend
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/nav_header_navigation">
        <menu>
            <group android:id="@+id/nav_group_navigation"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_popular_series"
                    android:icon="@drawable/ic_tv_24dp"
                    android:title="@string/nav_popular_series"
                    app:showAsAction="ifRoom|withText"/>

                <item
                    android:id="@+id/nav_popular_movies"
                    android:icon="@drawable/ic_local_movies_24dp"
                    android:title="@string/nav_popular_movies"
                    app:showAsAction="ifRoom|withText"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_header_customization">
        <menu>
            <group android:id="@+id/nav_group_customization">
                <item
                    android:id="@+id/nav_theme"
                    android:icon="@drawable/ic_invert_colors_24dp"
                    android:title="@string/nav_theme" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_header_support">
        <menu>
            <group android:id="@+id/nav_group_support">
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_help_24dp"
                    android:title="@string/nav_about" />
            </group>
        </menu>
    </item>

</menu>
